# hyde

./: .gitignore  Containerfile  README.md  SECURITY.md  build.ps1  build.sh  config.example.toml  default.env  default.toml  package-lock.json
.github/: dependabot.yml
.github/workflows/: aca.yml  autodependabot.yml  backend-ci.yml  build-push-amd64.yml  build-push.yml  ci.yml  container-aca-devel.yml  container-aca-latest.yml  container-aca.yml  frontend-ci.yml  hyde-dev-container-AutoDeployTrigger-c7b2135f-5f5f-43e0-8ec4-c290a9c40d4b.yml
backend/: Cargo.toml
backend/backups/: creating-backups.md
backend/docs/backups/: creating-backups.md
backend/migrations/: 20240605000357_initial.sql  20240613175300_admin-group.sql  20240706024659_add-pfp.sql  20241219200647_manage-branches.sql
backend/src/: app_conf.rs  auth.rs  db.rs  gh.rs  git.rs  hyde_config.rs  main.rs  perms.rs
backend/src/handlers/: get_doc.rs  get_tree.rs  mod.rs  oauth.rs
backend/src/handlers_prelude/: doc.rs  get_last_commit.rs  github_handlers.rs  github_hook.rs  github_list_branches.rs  github_pull_request.rs  groups.rs  logout.rs  mod.rs  oauth.rs  pr.rs  reclone.rs  repo_fs.rs  tree.rs  users.rs
docs/: discord.md  env.md  github.md  toml.md
frontend/: .stylelintrc.json  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: cache.ts  groups.ts  main.ts  net.ts  render.test.ts  render.ts  toast.ts  types.d.ts  types.ts
frontend/src/lib/components/: AssetSelector.svelte  BranchButton.svelte  ConfirmationDialogue.svelte  Editor.svelte  FileNavigation.svelte  SettingsMenu.svelte  SideBar.svelte  TopBar.svelte
frontend/src/lib/components/dashboard/: AdminDashboard.svelte  BaseBranch.svelte  BranchTab.svelte  GroupTab.svelte  ServerTab.svelte  UserTab.svelte
frontend/src/lib/components/editors/: AssetEditor.svelte  DocumentEditor.svelte
frontend/src/lib/components/elements/: ChangeDialogue.svelte  ConfirmationDialogue.svelte  LoadingIcon.svelte  SectionHeader.svelte  Toast.svelte  ToggleSwitch.svelte
frontend/src/lib/components/sidebar/: AssetSelector.svelte  FileNavigation.svelte  MockDirectory.svelte  SideBar.svelte
frontend/src/lib/components/topbar/: BranchButton.svelte  PullRequest.svelte  SettingsMenu.svelte  TopBar.svelte
frontend/src/lib/state/: branch.svelte.ts  page.svelte.ts  sidebar.svelte.ts
frontend/src/routes/: +page.svelte  LoadingIcon.svelte  SideBar.svelte  Toast.svelte  Toasts.svelte  TopBar.svelte
frontend/src/routes/components/: Editor.svelte  SettingsMenu.svelte  SideBar.svelte  TopBar.svelte
frontend/src/routes/components/dashboard/: GroupTab.svelte  UserTab.svelte
frontend/src/routes/dashboard/: +page.svelte  AdminDashboard.svelte  GroupTab.svelte  UserTab.svelte
frontend/src/routes/editor/: +page.svelte  ChangeDialogue.svelte  LoadingIcon.svelte  Toast.svelte  Toasts.svelte
frontend/src/routes/editor/nav/: ChangeDialogue.svelte  FileNavigation.svelte  SideBar.svelte  TopBar.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/nav/: SettingsMenu.svelte  TopBar.svelte
frontend/static/css/: main.css  theme.css
graphics/: logo-dark-v1.ai
