[package]
name = "hyde-backend"
version = "2.1.4"
edition = "2024"
license-file = "../LICENSE"
description = "A backend for the r/TechSupport CMS"
repository = "https://github.com/r-Techsupport/hyde"
readme = "../README.md"
keywords = ["cms", "wiki"]
categories = ["web-programming"]
rust-version = "1.85.0"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros"] }
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
fs-err = { version = "3.1.1", features = ["tokio"] }
git2 = "0.20.2"
jsonwebtoken = "9.3.1"
oauth2 = "5.0.0"
reqwest = { version = "0.12.22", features = ["stream", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "signal", "tracing"] }
tower-http = { version = "0.6.6", features = ["normalize-path", "fs", "cors", "tracing", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
toml = "0.8.23"
