[package]
name = "hyde-backend"
version = "2.1.5"
edition = "2024"
license-file = "../LICENSE"
description = "A backend for the r/TechSupport CMS"
repository = "https://github.com/r-Techsupport/hyde"
readme = "../README.md"
keywords = ["cms", "wiki"]
categories = ["web-programming"]
rust-version = "1.88.0"

[dependencies]
axum = { version = "0.8.9", features = ["http2", "macros"] }
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
fs-err = { version = "3.3.0", features = ["tokio"] }
git2 = { version = "0.21.0", features = ["https"] }
jiff = "0.2.29"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.10.2"
reqwest = { version = "0.13.4", features = ["stream", "json", "form", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "tracing"] }
tower-http = { version = "0.7.0", features = ["normalize-path", "fs", "cors", "tracing", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
toml = "1.1.2"
